--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
                     <div class="sub header">Upload your articles here</div>
                 </h2>
                 <div class="field"><input type="text" placeholder="Name"></div>
-
-                    <div class="two fields">
                         <div class="field">
-                            <label>Year</label>
                             <select class="ui search dropdown">
                                 <option value="">Select Year</option>
                                 <option value="1">FE</option>
@@ -44,21 +41,20 @@
                             </select>
                         </div>
                         <div class="field">
-                            <label>Branch</label>
+                            <!--If selected branch is FE then the options here should be A,B,C and D-->
                             <select class="ui search dropdown">
                                 <option value="">Select Branch</option>
                                 <option value="1">Computers</option>
-                                <option value="1">Electronics</option>
-                                <option value="1">Production</option>
-                                <option value="1">IT</option>
+                                <option value="2">Electronics</option>
+                                <option value="3">Production</option>
+                                <option value="4">IT</option>
                             </select>
                         </div>
-                    </div>
-                    <div class="field"><label for="file" class="ui icon button">
+                    <div class="field"><label for="file" class="ui blue basic icon button">
                         <i class="file icon"></i>
                         Select File</label>
                         <input type="file" id="file" style="display:none"></div>
-                    <div class="field"><input type="submit" class="ui fluid button"></div>
+                    <div class="field"><input type="submit" class="ui blue basic fluid button"></div>
             </form>
         </div>
     </div>
